package e2;

public interface Logics {

    boolean hasMine(int i, int j);
}
