package e2;

public class Main {
    public static void main(final String[] args) {
        new GUI(7, 7);
    }
}
