@startuml

title __PPS-22-23-LAB02's Class Diagram__\n

  namespace e1 {
    interface e1.Board {
    }
  }
  

  namespace e1 {
    class e1.BoardImpl {
    }
  }
  

  namespace e1 {
    class e1.BoardTest {
    }
  }
  

  namespace e1 {
    class e1.GUI {
    }
  }
  

  namespace e1 {
    interface e1.GameStrategy {
    }
  }
  

  namespace e1 {
    interface e1.GameStrategyFactory {
    }
  }
  

  namespace e1 {
    class e1.GameStrategyFactoryImpl {
    }
  }
  

  namespace e1 {
    class e1.GameStrategyTest {
    }
  }
  

  namespace e1 {
    class e1.LogicTest {
    }
  }
  

  namespace e1 {
    interface e1.Logics {
    }
  }
  

  namespace e1 {
    class e1.LogicsImpl {
    }
  }
  

  namespace e1 {
    class e1.Main {
    }
  }
  

  namespace e1 {
    class e1.Pair {
    }
  }
  

  namespace e2 {
    class e2.GUI {
    }
  }
  

  namespace e2 {
    interface e2.Logics {
    }
  }
  

  namespace e2 {
    class e2.LogicsImpl {
    }
  }
  

  namespace e2 {
    class e2.Main {
    }
  }
  

  namespace e2 {
    class e2.Pair {
    }
  }
  

  e1.BoardImpl .up.|> e1.Board
  e1.BoardTest o-- e1.Board : board
  e1.GUI -up-|> javax.swing.JFrame
  e1.GUI o-- e1.Logics : logics
  e1.GameStrategyFactoryImpl .up.|> e1.GameStrategyFactory
  e1.GameStrategyTest o-- e1.GameStrategy : strategy
  e1.LogicTest o-- e1.Logics : logics
  e1.LogicsImpl .up.|> e1.Logics
  e1.LogicsImpl o-- e1.Board : board
  e1.LogicsImpl o-- e1.GameStrategy : strategy
  e1.Pair o-- X : x
  e1.Pair o-- Y : y
  e2.GUI -up-|> javax.swing.JFrame
  e2.GUI o-- e2.Logics : logics
  e2.LogicsImpl .up.|> e2.Logics
  e2.Pair o-- X : x
  e2.Pair o-- Y : y


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
